# IoT_Project_Piano_Everywhere

./: README.md
IoT_Arduino/android/: build.gradle  local.properties
IoT_Arduino/android/app/: build.gradle  google-services.json
IoT_Arduino/android/app/src/main/: AndroidManifest.xml
IoT_Arduino/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
IoT_Arduino/ios/Runner/: GeneratedPluginRegistrant.m
IoT_Arduino/ios/Runner.xcodeproj/: project.pbxproj
IoT_Arduino/lib/res/: custom_colors.dart
IoT_Arduino/lib/screens/: ClassicalPiano.dart  piano.dart  ranks.dart  register_screen.dart  user_info_screen.dart
IoT_Arduino/lib/utils/: validator.dart
IoT_Arduino/lib/widgets/: app_bar_title.dart  sign_in_form.dart
IoT_Flutter_App/: pubspec.yaml
IoT_Flutter_App/android/app/src/profile/: AndroidManifest.xml
IoT_Flutter_App/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
IoT_Flutter_App/ios/Runner/: GoogleService-Info.plist
IoT_Flutter_App/lib/: main.dart
IoT_Flutter_App/lib/screens/: feedback.dart  sign_in_screen.dart  songs.dart
IoT_Flutter_App/lib/utils/: authentication.dart
IoT_Flutter_App/lib/widgets/: custom_form_field.dart  register_form.dart
IoT_Flutter_App/web/: index.html  manifest.json
OpenCV_Piano/: CMakeLists.txt  Colors.h  Detector.h  HandDetector.h  MyIncludes.h  OpenCV_Sandbox2.cpp  OpenCV_Sandbox2.h  PianoDetector.h  PianoHandler.h
arduino_piano/: arduino_piano.ino
esp_piano/: esp_piano.ino
(+1 files in other folders)
